[package]
name = "safirefuzz"
version = "0.1.0"
authors = ["Lukas Seidel"]
documentation = ""
edition = "2018"
include = [
    "/.gitmodules",
    "/Cargo.toml",
    "/README.md",
    "/src/*",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pr0me/SAFIREFUZZ"
description = "Fuzz embedded ARM firmware efficiently"

[features]
full_trace = []
trap = []
dbg_prints = []

[profile.release]
incremental = true

[dependencies]
libafl = { path = "./LibAFL/libafl"}
capstone = "0.10.0"
capstone-sys = "0.14.0"
keystone = { path = "./keystone/bindings/rust/"}
nix = "=0.23.0"
libc = "=0.2.102"
svd-parser = "0.9.0"
serde_json = "1.0.59"
serde = "1.0.59"
region = "2.2.0"
clap = "2.33.2"
text_io = "0.1.8"
parse_int = "0.1.0"
regex = "=1.5.5"
addr2line = "=0.17.0"
regex-automata = "=0.2.0"
backtrace = "=0.3.64"
unicode-width = "=0.1.9"
cc = "=1.0.73"
libm = "=0.2.1"